# distPi

./: .gitignore  0_Clean.bat  0_Clean.sh  0_Pull.sh  1_Pull.bat  2_Build.bat  3_StartRedis.sh  LICENSE  README.md  RedisConfig.conf  Win_3_StartViewer.bat
RedisInterface/: Program.cs  RedisInterface.csproj  RedisInterface.sln
RedisInterface/Properties/: AssemblyInfo.cs
RedisInterface/RedisInterface/: RedisInterface.csproj
RedisInterface/RedisInterface/Properties/: AssemblyInfo.cs
RedisInterface/SubscriberWindowWPF/: App.xaml  App.xaml.cs  Item.cs  MainWindow.xaml.cs  SubscriberWindowWPF.csproj
RedisInterface/SubscriberWindowWPF/Properties/: AssemblyInfo.cs
src/: Nix_0_Clean.sh  Nix_1_Pull.sh  Nix_2_Build.sh  Nix_3_StartMicroservice.sh  Nix_3_StartRedis.sh  Nix_3_StartRedisCli.sh  Nix_4_Deploy.sh  Win_0_CheckEnv.bat  Win_0_Clean.bat  Win_1_Pull.bat  Win_2_Build.bat  Win_3_StartMicroService.bat  Win_3_StartRedis.bat  Win_3_StartRedisCli.bat  Win_3_StartViewer.bat  Win_4_Deploy.bat
src/Config/: RedisConfig_Linux.conf
src/DataModel/: Nix_Build.sh  Win_Build.bat
src/DataModel/GenerateCsProj/: GenerateCsProj.csproj  GenerateCsProj.sln  Program.cs
src/DataModel/GenerateCsProj/Properties/: AssemblyInfo.cs
src/DataModel/Protos/: LogMessage.proto  TimeSpec.proto
src/DataModel/Protos/Test/: Ping.proto  Pong.proto
src/DataModel/Protos/Utility/: LogMessage.proto  TimeSpec.proto
src/ExampleMicroservice/: CMakeLists.txt  ExampleMicroservice.cpp  ExampleMicroservice.sln  ExampleMicroservice.vcxproj  ExampleMicroservice.vcxproj.filters  makefile
src/ExampleMicroservice/ExampleMicroservice/: CallbackTimer.h  ExampleAgent.h  ExampleMicroservice.cpp  ExampleMicroservice.h  ExampleMicroservice.vcxproj  ExampleMicroservice.vcxproj.filters  Libs.h  Logger.h  MessageSubscriber.h  Microservice.cpp  ReactiveAgent.h  Subscriber.h  uuid.h
src/ExampleMicroservice/MicroserviceLib/: CallbackTimer.h  IMessageSubscriber.h  IntervalTimer.h  Libs.h  Logger.h  MessageSubscriber.h  Microservice.cpp  Microservice.h  PubSubMessage.h  Publisher.h  SafeQueue.h  Subscriber.h  TerminalTimer.h  uuid.h
src/ExampleMicroservice/MicroserviceLib/impl/: IMessageSubscriber.h  Microservice.cpp  PubSubMessage.h
src/MonitoringTools/: MonitoringTools.sln
src/MonitoringTools/ChronologicalMessageWindow/: App.xaml  App.xaml.cs  ChronologicalMessageWindow.csproj  DataTreeView.xaml  DataTreeView.xaml.cs  GridItem.cs  MainWindow.xaml  MainWindow.xaml.cs  RedisDataGridAdapter.cs
src/MonitoringTools/ChronologicalMessageWindow/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
src/MonitoringTools/CommandLineLogViewer/: CommandLineLogViewer.csproj  Program.cs
src/MonitoringTools/CommandLineLogViewer/Properties/: AssemblyInfo.cs
src/MonitoringTools/DataModel/: .gitignore  DataModel.csproj.preProto
src/MonitoringTools/DataModel/Properties/: AssemblyInfo.cs
src/MonitoringTools/DataModel/Utilities/: FileEncoding.cs
src/Patches/: 0001-Patch-to-allow-builds-in-VS2019.patch
src/Patches/Newtonsoft.Json/: 0001-Patch-to-adjust-the-dotnet-SDK-version.patch
src/Patches/StackExchange.Redis/: 0001-Patch-to-remove-github-hooks.patch
src/RedisInterface/: RedisInterface.sln
src/RedisInterface/DataModel/: DataModel.csproj
src/RedisInterface/DataModel/Utilities/: ReflectiveDataModelCollection.cs
src/RedisInterface/RedisInterface/: Program.cs  RedisInterface.csproj
src/RedisInterface/SubscriberWindowWPF/: App.xaml  App.xaml.cs  DataTreeView.xaml  DataTreeView.xaml.cs  GridItem.cs  MainWindow.xaml  MainWindow.xaml.cs  RedisDataGridAdapter.cs  SubscriberWindowWPF.csproj
src/RedisInterface/SubscriberWindowWPF/Properties/: Resources.Designer.cs  Settings.Designer.cs
